--- a/document/2022_Hogg_Young_Comparison.qmd
+++ b/document/2022_Hogg_Young_Comparison.qmd
@@ -10,6 +10,7 @@ author:
 toc: false
 number-sections: true
 csl: biogeosciences.csl
+bibliography: young_hogg_comparison.bib
 format:
   docx: 
     reference-doc: template.docx
@@ -35,28 +36,39 @@ Many quantitative relations in the environmental sciences, and specifically in w
 
 Wetlands are important global carbon (C) stores, accounting for 20-30% of the total terrestrial C storage in soils despite only covering 4-6% of the Earth's land surface (refs). While peatlands are responsible for the majority of C stored in wetland soils, freshwater mineral soil (FWMS) wetlands are also globally significant C stores. Furthermore, FWMS wetlands are typically much more productive compared to peat forming wetlands (Mitsch and Gosselink 2000; Rocha and Goulden 2009). Globally, average C sequestration in established temperate FWMSWs is estimated to range between 100 and 250 $gC~m^{-2}~yr^{-1}$ (Bernal and Mitsch, 2012; Zhang et al., 2016; Lu et al., 2017). 
 
-The North American Prairie Pothole Region (PPR) extends from north-west Iowa in the USA into central Alberta in Canada and covers an area of ~800,000 km$^{2}$ (Badiou et al., 2011). This region is dotted with millions of FWMS wetlands, generally refereed to as prairie pothole wetlands. Relative to other wetland ecosystems such as swamps, bogs, and northern peatlands, fewer studies have focused on prairie pothole wetlands despite their high C sequestration capacity (Bansal et al., 2016).
+The North American Prairie Pothole Region (PPR) extends from north-west Iowa in the USA into central Alberta in Canada and covers an area of ~800,000 km$^{2}$ [@Badiou2011]. This region is dotted with millions of FWMS wetlands, generally refereed to as prairie pothole wetlands. Relative to other wetland ecosystems such as swamps, bogs, and northern peatlands, fewer studies have focused on prairie pothole wetlands despite their high C sequestration capacity (Bansal et al., 2016).
 
 Although peatlands account for the majority of wetland area in Canada, it is estimated that ~20 million ha of FWMSWs have been lost in Canada since European settlement (~1800), compared to 1.4 million ha of peatlands (National Wetlands Working Group (NWWG) 1988), resulting in significant emissions of $CO_2$ to the atmosphere (refs). Conversely, restoring FWMSWs can reverse soil C loss and sequester atmospheric $CO_2$ (refs). Several studies have shown that restored wetlands in the Prairie Pothole Region of North America are particularly proficient at sequestering C (Gleason et al., 2006), with C sequestration rates ranging between 110-305 $gC~m^{-2}~yr^{-1}$ (Euliss et al., 2006; Badiou et al., 2011; Tangen and Bansal, 2020). These high C sequestration rates are driven by high productivity and low decomposition rates created by anoxic conditions. However, the same conditions which allow PPR wetlands to accumulate large amounts of C also promote the production and emission of methane ($CH_4$).  
 
 Methane fluxes from PPR wetlands have been observed to be among the highest reported for freshwater wetlands, although emissions show considerable spatial and temporal variability (Bansal et al., 2016, Badiou et al., 2011, Pennock et al., 2010). Notably, $CH_{4}$ emissions in the PPR are significantly inversely correlated to $SO_{4}^{-2}$ concentrations of wetland waters (Pennock et al. 2010, Bansal et al., 2016). PPR wetlands have a wide range of sulfate-dominated salinities due to undulating topography and groundwater interactions with sulfur and carbonate rick glacial till (Winter and Rosenberry 1998;Goldhaber et al.2014). Higher sulfate concentrations are typically linked to reduced $CH_{4}$ emissions as sulfate-reducing bacteria out compete methanogens for primary substrates such as acetate and hydrogen (refs).  
 
-While there have been a growing number of studies focused on C cycling in the PPR wetlands, to date observations of greenhouse gas (GHG) fluxes in the region have only been conducted using chamber-based methods (e.g., Bansal et al., 2016, more refs). While chambers are advantageous for assessing the spatial variability in GHG exchange and treatment effects on fluxes, they are discrete in time, cover only a small area and are challenging to conduct over tall, emergent vegetation which dominate PPR wetlands. These limitations present challenges for estimating robust annual GHG budgets at the ecosystem level (Baldocchi 2003). Conversely, eddy covariance measurements can provide GHG flux estimates that are near-continuous and at ecosystem-scale flux measurements, without interfering with the system they are measuring. This makes this approach well-suited for estimating accurate GHG budgets and informing nature-based climate solutions (Novick et al., 2022). Furthermore, coupling these quasi-continuous flux measurements with ancillary biophysical measurements can provide new insights into the controls on GHG fluxes across a range of temporal scales (Knox et al., 2021) 
+While there have been a growing number of studies focused on C cycling in the PPR wetlands, to date observations of greenhouse gas (GHG) fluxes in the region have only been conducted using chamber-based methods (e.g., Bansal et al., 2016, more refs). While chambers are advantageous for assessing spatial variability in GHG exchange and treatment effects on fluxes, they are discrete in time, cover only a small area and are challenging to conduct over tall, emergent vegetation which dominate PPR wetlands. These limitations present challenges for estimating robust annual GHG budgets at the ecosystem level (Baldocchi 2003). Conversely, eddy covariance measurements can provide GHG flux estimates that are near-continuous and at ecosystem-scale flux measurements, without interfering with the system they are measuring. This makes this approach well-suited for estimating accurate GHG budgets and informing nature-based climate solutions (Novick et al., 2022). Furthermore, coupling these quasi-continuous flux measurements with ancillary biophysical measurements can provide new insights into the controls on GHG fluxes across a range of temporal scales (Knox et al., 2021) 
 
 Here we present the first eddy covariance estimates of carbon dioxide ($CO_{2}$) and $CH_{4}$ fluxes from two geographically isolated freshwater marshes in the grasslands and croplands of the PPR of Canada. Our objectives are to: (1) assess the annual GHG budget of these two wetland sites, and (2) identify the biophysical drivers of $CO_{2}$ and $CH_{4}$ fluxes at these sites and if/how they differ between sites.
 
 
 
-
-
-
 # Methods
 
-## Site Description
+## Site description
 
-Hogg & Young are geographically isolated freshwater marshes in the grasslands and croplands of the Prairie Pothole Region of Canada. Hogg is embedded in perennial cover used for grazing cattle. This site is completely covered by emergent vegetation consisting almost entirely of Schoenoplectus tabernaemontani, with a few small patches of Typha spp. Young has large open-water areas with submersed macrophyte beds surrounded by a dense emergent vegetation fringe dominated by Typha spp. 
+MBPPW1, located at 50.3623˚N, -100.20242˚W, is an isolated cropland marsh in the PPR of Manitoba, Canada. This wetland site is entirely dominated by emergent vegetation, primarily populated by Schoenoplectus tabernaemontani and Typha spp. The water chemistry in this wetland is characterized by high sulfate concentrations.
 
-Get more from Pascal.
+MBPPW2, located at 50.3705˚N, -100.5339˚W, is an isolated grassland marsh about 24 km East of MBPPW1. However, this site is much more heterogenous than MBPPW1 and is characterized by a combination of open water and emergent vegetation. Large mats of submersed macrophytes are found near the open water surface during the growing season, and the emergent vegetation is dominated by Typha spp. This site is characterized by lower sulfate concentrations.
+
+## Eddy covariance measurements
+
+## Gap-filling, NEE partitioning, and annual budget computation
+
+## Supporting measurements
+
+# Results
+
+## Weather and hydrological conditions
+
+Figure [-@fig-NEE].
+
+![NEE.](../figures/NEE.png){#fig-NEE}
 
 # Discussion
 
@@ -71,4 +83,9 @@ production   (Gauci   et   al.2004).   A   recent   studyconducted  in  ephemera
 
 depletion   in   SO42-concentrations   has   also   beendocumented   by   Phipps   (2006)   for   a   permanentwetland  located  in  the  St.  Denis  National  WildlifeArea in Saskatchewan, Canada
 
+# References {.unnumbered}
 
+::: {#refs}
+:::
+
+{{< pagebreak >}}
