updated met plots and text

--- a/document/2022_Hogg_Young_Comparison.qmd
+++ b/document/2022_Hogg_Young_Comparison.qmd
@@ -71,9 +71,7 @@ ABS 280 - does higher mean more recalcitrant DOC?
 
 ## Statistical methods
 
-All data processing and statistical analyses were conducted using R (R Core Team, 2019). A two-sample Wilcoxon test was used to assess differences in water quality parameters between sites (NOTE TO DELETE: this is for variables with only 1 year) due to the small sample size and the fact that a number of quality parameters were not normally distributed.This was done using the `wilcox.test` function from the `stats` package. 
-
-When water quality parameters were available for multiple years, significant differences in water quality parameters between sites, years and the interaction between site and years were assessed using a two-way ANOVA with Type III Sums of Squares on the rank-transformed data, as ranking can be used to transform data that do not meet the assumptions of normality (ref). Here, each original data value was replaced by its rank, with 1 for the smallest value to N for the largest, where N is the combined data sample size. This rank-based approach is robust to non-normal errors, resistant to outliers, and is effective for many distributions. 
+All data processing and statistical analyses were conducted using R (R Core Team, 2019). Significant differences in water quality parameters, environmental variables, and fluxes between sites, years and the interaction between site and year were assessed using a two-way ANOVA with Type III Sums of Squares on the rank-transformed data, as ranking can be used to transform data that do not meet the assumptions of normality (ref). Here, each original data value was replaced by its rank, with 1 for the smallest value to N for the largest, where N is the combined data sample size. This rank-based approach is robust to non-normal errors, resistant to outliers, and is effective for many distributions. When comparing differences in variables between sites, years and the interaction between site and year, we only considered the summer period when water quality measurements were available.
 
 Multivariate associations of water quality parameters across sites were analyzed using principal component analysis (PCA). All variables were centered and scaled, and PCA was done using the prcomp function in base R. 
 As certain water quality parameters were highly correlated (Figure [-@fig-PCA]), we only selected a subset of water quality parameters for the hierarchical mixed model. To capture the primary differences in water quality parameters between sites, only $SO_{4}^{2-}$, TP, and pH were included in the model. 
@@ -82,7 +80,25 @@ As certain water quality parameters were highly correlated (Figure [-@fig-PCA]),
 
 ## Meteorology and hydrological conditions
 
-### Water quality (maybe add WTD here)
+Figure [-@fig-met_ts].
+
+![met_ts.](../figures/Met_ts.png){#fig-met_ts}
+
+Given the proximity of the sites, Hogg and Young experienced similar meteorological conditions; there were no significant differences in mean growing season daily incoming photosynthetically active radiation (PPFD_IN), air temperature (TA), vapor pressure deficit (VPD), and precipitation (P) between sites. However, water levels at Young were significantly higher than at Hogg (Table [-@tbl-MET]; Figure [-@fig-met_ts]). Mean growing season temperatures were significantly higher in 2021 than 2022, with an average of 16.3 and 16.4 C at Hogg and Young, respectively. This also resulted in higher VPD in 2021 compared to 2022 (Table [-@tbl-MET]). 
+
+```{r, echo=FALSE, warning = FALSE, message = FALSE}
+#| label: tbl-MET
+#| tbl-cap: Growing season mean air temperature (TA) and vapour pressure deficit (VPD), photosynthentically active radiation (PPFD_IN), and water table dept (WTD), and cumulative precipitation at Hogg and Young during 2021 and 2021.
+# Make sure there are no empty lines in the code of the cross referencing won't work!
+load(here("output/daily_Met_mean.Rda"))
+data.annual.met.GS[,c(3,4,6,7)] <- round(data.annual.met.GS[,c(3,4,6,7)],1)
+data.annual.met.GS[,c(5)] <- round(data.annual.met.GS[,c(5)],0)
+MET <- data.annual.met.GS
+knitr::kable(MET)
+```
+
+
+## Water quality observations
 
 Significant differences were observed in water quality parameters across sites (Table [-@tbl-WQ], Figure [-@fig-PCA]). Averaged across years, Hogg had significantly higher $SO_{4}^{2-}$, specific conductivity, dissolved organic carbon (DOC), total dissolved nitrogen (TDN), and Specific ultraviolet absorbance at 280 nm (ABS 280) than Young. Conversely, dissolved reactive phosphorus (DRP), total dissolved phosphorus (TDP) concentrations than Young, total phosphorus (TP) was significantly lower at Hogg than Young. No significant differences in pH, NO3 or NO2, or NH4 were observed between sites.
 
@@ -106,22 +122,6 @@ Figure [-@fig-PCA].
 
 ### Meteorological conditions
 
-Figure [-@fig-met_ts].
-
-![met_ts.](../figures/Met_ts.png){#fig-met_ts}
-
-Although water quality differed significantly between sites, given the proximity of the sites, Hogg and Young experienced similar meteorological conditions; there were no significant differences in mean annual air temperature (TA), vapor pressure deficit (VPD), incoming photosynthetically active radiation (PPFD_IN), and precipitation between sites. However, water levels at Young were significantly higher than at Hogg (Table [-@tbl-MET]). 
-
-SUMMARIZE for GS (JJA - or period corresponding to WQ measurements)
-
-```{r, echo=FALSE, warning = FALSE, message = FALSE}
-#| label: tbl-MET
-#| tbl-cap: Differences in water quality parameters across sites.
-# Make sure there are no empty lines in the code of the cross referencing won't work!
-load(here("output/daily_Met_mean.Rda"))
-MET <- data.annual.met.GS
-knitr::kable(MET)
-```
 
 
 Figure [-@fig-NEE].
